--- a/doc/CHANGELOG
+++ b/doc/CHANGELOG
@@ -1,3 +1,8 @@
+=== 2013/06/28 ===
++ fix update routine
++ server deleted: md5.bobotig.fr
+
+
 === 2011/01/22 ===
 + added the MD5-utils lite version (md5crack)
 + code reviewed
